Trying to fix the height on mobiles.

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  padding:0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -20,15 +22,14 @@ html {
   overflow:hidden;  
   cursor:pointer;
   user-select: none;
+  height:100%;
 }
 
 .App {
   overflow:hidden;
   text-align: center;    
   padding:0;  
-  margin-top:0vh; 
-  margin-left:0vw;   
-  margin-right:0;
+  margin:0;
   font-size:6.1vh;
   color:rgba(255, 255, 255, 0.9);  
   font-weight: 600;  
